Fixed input boxes alignment

--- a/static/style.css
+++ b/static/style.css
@@ -201,9 +201,25 @@ body {
 #add-form {
     height: 200px;
     padding: 1px 1px;
+    text-align: center;
+    
+}
+
+.title, .text {
+    width: 80%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
 #addbtn, #closebtn {
     display: flex;
     justify-content: center;
+}
+
+.text {
+    resize: none;
 }
